--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "rich>=13.0",
     "httpx>=0.27",
     "python-dotenv>=1.0",
+    "pymupdf>=1.24.0",
+    "pymupdf4llm>=0.0.17",
 ]
 
 [project.optional-dependencies]
